--- a/Data Collection & Data Wrangling.Rmd
+++ b/Data Collection & Data Wrangling.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Data Collection and Data Wrangling"
-author: "Sana Rasheed"
-date: "July 19, 2020"
+author: "Zahid Riaz"
+date: "January 26, 2021"
 output: html_document
 ---
 
